<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="16dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tv_text"
        style="@style/OpenResolver"
        android:text="@string/text"
        android:drawableLeft="@drawable/ic_insert_drive_file"
        android:layout_width="match_parent"
        android:layout_height="45dp" />

    <TextView
        android:id="@+id/tv_image"
        style="@style/OpenResolver"
        android:text="@string/image"
        android:drawableLeft="@drawable/ic_collections"
        android:layout_width="match_parent"
        android:layout_height="45dp" />

    <TextView
        android:id="@+id/tv_audio"
        style="@style/OpenResolver"
        android:text="@string/audio"
        android:drawableLeft="@drawable/ic_headset"
        android:layout_width="match_parent"
        android:layout_height="45dp" />

    <TextView
        android:id="@+id/tv_video"
        style="@style/OpenResolver"
        android:text="@string/video"
        android:drawableLeft="@drawable/ic_videocam"
        android:layout_width="match_parent"
        android:layout_height="45dp" />

    <TextView
        android:id="@+id/tv_other"
        style="@style/OpenResolver"
        android:text="@string/other"
        android:drawableLeft="@drawable/ic_more_horiz"
        android:layout_width="match_parent"
        android:layout_height="45dp" />

</LinearLayout>